<resources>
    <string name="app_name">TE_project_prototype1</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="com.twitter.sdk.android.CONSUMER_KEY">Tpox4IIoYZWzFw4ccsweKWlNE</string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET">gTpqdTGSBUfQzCJx2enXiJ0OtnCWkyyM6rEvIBFT5RfY2PnKVG</string>
    <string name="welcomemessage">Welcome to XYZ</string>
    <string name="login">LOGIN</string>
    <string name="string_login">LOGIN</string>
    <string name="enter_password">Enter Password</string>
    <string name="not_having_an_account">NOT HAVING AN ACCOUNT</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_email_id">Enter Email ID</string>
    <string name="sugg">SUGGESTIONS</string>
    <string name="sugglink1">
        <a href="https://youtu.be/aQIqQ2-lyO8">How to Meditate?</a>
    </string>
    <string name="sugglink2">
        <a href="https://youtu.be/aQIqQ2-lyO8">How to Relax in 2 minutes?</a>
    </string>
    <string name="sugglink3">
        <a href="https://youtu.be/aQIqQ2-lyO8">How to calm anxiety?</a>
    </string>
    <string name="sugglink4">
        <a href="https://youtu.be/aQIqQ2-lyO8">How to manage stress?</a>
    </string>
    <string name="sugglink5">
        <a href="https://youtu.be/aQIqQ2-lyO8">How to manage depression?</a>
    </string>

</resources>
