<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".userInfoActivity"
    android:padding="25sp">

    <TextView
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif-condensed-medium"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="60sp"
        android:textStyle="bold"
        tools:targetApi="jelly_bean" />

    <TextView
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:text="@string/welcomemessage"
        android:layout_below="@+id/login"
        android:gravity="center"
        android:textSize="25sp"
        android:textColor="@color/colorPrimaryDark" />


    <EditText
        android:id="@+id/ipname"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/line"
        android:gravity="bottom"
        android:inputType="textPersonName"
        android:text="@string/enter_name"
        android:textColor="@color/colorPrimaryDark"
        android:importantForAutofill="no"
        android:labelFor="@+id/ipname"/>

    <EditText
        android:id="@+id/ipemail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/ipname"
        android:gravity="bottom"
        android:text="@string/enter_email_id"
        android:textColor="@color/colorPrimaryDark"
        android:inputType="textEmailAddress"
        android:importantForAutofill="no"
        android:labelFor="@+id/ipemail"
        />

    <EditText
        android:id="@+id/ippassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/ipemail"
        android:gravity="bottom"
        android:text="@string/enter_password"
        android:textColor="@color/colorPrimaryDark"
        android:inputType="numberPassword"
        android:importantForAutofill="no"
        android:labelFor="@+id/ippassword"
        />

    <Button
        android:id="@+id/signup"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="bottom"
        android:text="@string/not_having_an_account"
        android:layout_below="@+id/ippassword"
        android:textSize="15sp"
        android:textColor="@color/colorPrimaryDark" />

    <Button
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:layout_below="@+id/signup"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/string_login"
        android:textColor="@android:color/white"
        android:textSize="25sp" />

</RelativeLayout>